<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_character"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:foreground="@drawable/mask_image_character"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rounded12"
        tools:ignore="ContentDescription"
        tools:src="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintTop_toBottomOf="@id/iv_character"
        tools:text="Rick Sanchez" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_character_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintTop_toBottomOf="@id/tv_character_name"
        tools:text="Human, alive" />

</androidx.constraintlayout.widget.ConstraintLayout>
